# unofficial-messenger

./: .editorconfig  .gitattributes  .gitignore  README.md  package.json  vite.config.ts
.github/workflows/: release.yml  rust.yml
public/: messenger.icns
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/deb/: postremove.sh  preinstall.sh
src-tauri/linux/rpm/: postremove.sh  preinstall.sh
src-tauri/src/: app_chrome_script.rs  badge.rs  clipboard.rs  lib.rs  navigation.rs  settings.rs  startup.rs  tray.rs  window.rs
src-tauri/src/app_chrome/: index.js
src-tauri/src/app_chrome/app_chrome_script/: badge.js  bootstrap.js  image_actions.js  init.js  load_overlay.js  navigation.js  notifications.js  styles.js  thread_list.js
src-tauri/src/app_chrome/app_chrome_style/: image_features.css  load_overlay.css  notification_prompt.css  responsive.css
src-tauri/windows/nsis/: uninstall-hooks.nsh
src-tauri/windows/wix/: cleanup-app-data.wxs
